<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextNombreValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edHintNombreEjemplo"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreCorto"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextNombreCortoValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edHintNombreCortoEjemplo"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTeléfono"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextTelefonoValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/edHintTelefonoEjemplo"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDireccion"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextDireccionValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edHintDireccionEjemplo"
        android:textColor="@color/black"/>
</LinearLayout>