<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvConcepto"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextConceptoGastoValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edHintConceptoEjemplo"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDescripcion"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextDescripcionGastoValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:hint="@string/edHintDescripcion"/>

    <TextView
        android:id="@+id/textViewFechaMostrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvFecha"
        android:textColor="@color/hintColor"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvDia"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvMes"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvYear"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/numberPickerFechaDia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:min="1"
            android:value="1"/>

        <NumberPicker
            android:id="@+id/numberPickerFechaMes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:min="1"
            android:max="12"
            android:value="1"
            android:stepSize="1"/>

        <NumberPicker
            android:id="@+id/numberPickerFechaYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:min="2000"
            android:value="2024"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMonto"
        android:textColor="@color/hintColor"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/editTextMontoGastoValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

</LinearLayout>