<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="@string/tvItemRecyclerCliente"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvItemRecyclerConcepto"
                android:textColor="@color/black"
                android:gravity="end"
                android:paddingRight="5dp"
                android:textSize="16sp"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvItemRecyclerFecha"
                android:textColor="@color/black"
                android:gravity="end"
                android:paddingRight="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/tvRecyclerItemAbonoNombreValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvItemRecyclerClienteDefecto"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvRecyclerItemAbonoConceptoValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvItemRecyclerConceptoDefecto"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="5dp"/>

            <TextView
                android:id="@+id/tvRecyclerItemAbonoFechaValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvItemRecyclerFechaDefecto"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvItemRecyclerMonto"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvRecyclerItemAbonoMontoValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tvItemRecyclerMontoDefecto"
                android:textColor="@color/purple_700"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>