<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.8">

            <TextView
                android:id="@+id/tvRecyclerItemClienteNombreValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvItemRecyclerNombreCompletoDefecto"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/tvItemRecyclerUltimoAbono"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRecyclerItemClienteFechaValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvItemRecyclerFechaDefecto"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvRecyclerItemClienteMontoValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvItemRecyclerMontoDefecto"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/purple_700"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivRecyclerItemLlamar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/ic_baseline_call_24"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>